feat: (5) Add Sypago endpoints for authentication and bank options
