# src/routes/sypago.ts
@@ -1,10 +1,12 @@
 import { Router } from 'express';
-import { tasaBank, bankOptions, sypagoAuth } from '../controllers/sypago.controller';
+import { tasaBank, bankOptions, sypagoAuth, sypagoOtpRequest, sypagoOtpCode } from '../controllers/sypago.controller';
 
 const router = Router();
 
 router.post('/auth', sypagoAuth);
 router.get('/bankOptions', bankOptions);
 router.get('/tasa', tasaBank);
+router.post('/otp', sypagoOtpRequest);
+router.post('/otp/code', sypagoOtpCode);
 
 export default router;
